fix: Some pages toast has extra margin

--- a/src/global.scss
+++ b/src/global.scss
@@ -101,7 +101,6 @@ ion-popover.error-popover {
   background-color: $green;
   border-radius: 8px !important;
   margin: 0 16px 30px !important;
-  padding: 12px 8px !important;
 }
 
 .msb-failure {
@@ -109,7 +108,6 @@ ion-popover.error-popover {
   background-color: $red;
   border-radius: 8px !important;
   margin: 0 16px 30px !important;
-  padding: 12px 8px !important;
 }
 
 .msb-info {
